src/auryn/tests/snapshots/auryn__auryn__tests__ui@recover_block.au.snap
---
source: src/auryn/tests/mod.rs
expression: "fn main() {\n    let\n}\n\nfn bar() {}"
input_file: src/auryn/tests/inputs/ui/recover_block.au
---
Error: Unexpected token
   ╭─[ main:2:8 ]
   │
 2 │     let
   │        │ 
   │        ╰─ got "\n"
   │ 
   │ Note: Expected `<identifier>`
───╯
