src/auryn/tests/snapshots/auryn__auryn__tests__ui@recover_expression.au.snap
---
source: src/auryn/tests/mod.rs
expression: "fn main() {\n\tlet a = ,\n}\n"
input_file: src/auryn/tests/inputs/ui/recover_expression.au
---
Error: Expected expression
   ╭─[ main:2:10 ]
   │
 2 │     let a = ,
   │             │ 
   │             ╰─ got ","
   │ 
   │ Note: Valid tokens: `<number>`, `<string>`, `<identifier>`, `(`, `true` or `false`
───╯
