src/auryn/tests/snapshots/auryn__auryn__tests__ui@recover_function_def.au.snap
---
source: src/auryn/tests/mod.rs
expression: "fn main( {\n    print(\"Hi\")\n}\n"
input_file: src/auryn/tests/inputs/ui/recover_function_def.au
---
Error: Unexpected token
   ╭─[ main:1:10 ]
   │
 1 │ fn main( {
   │          │ 
   │          ╰─ got "{"
   │ 
   │ Note: Expected `<identifier>`
───╯
