src/auryn/tests/snapshots/auryn__auryn__tests__ui@recover_newline_separated.au.snap
---
source: src/auryn/tests/mod.rs
expression: "unsafe extern \"java\" {\n\t[\"foo\"]\n\ttype Foo {\n\t\t[\"bar\"]\n\t\tinvalid item\n\t}\n}\n\nfn main() {\n\tprint(Foo)\n}\n"
input_file: src/auryn/tests/inputs/ui/recover_newline_separated.au
---
Error: Expected extern type body item
   ╭─[ main:5:3 ]
   │
 5 │        invalid item
   │        │ 
   │        ╰─ got "invalid"
───╯
